packages/dart_edge_sql/lib/src/native/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_edge_sql/dart_edge_sql.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int64 Function(ffi.Int64)>()
external int dart_edge_sql_begin_transaction(int pool_handle);

@ffi.Native<ffi.Void Function()>()
external void dart_edge_sql_close_all_pools();

@ffi.Native<ffi.Void Function(ffi.Int64)>(isLeaf: true)
external void dart_edge_sql_close_pool(int handle);

@ffi.Native<ffi.Bool Function(ffi.Int64)>()
external bool dart_edge_sql_commit_transaction(int handle);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> dart_edge_sql_execute_pool(
  int handle,
  ffi.Pointer<ffi.Char> statement_json,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> dart_edge_sql_execute_transaction(
  int handle,
  ffi.Pointer<ffi.Char> statement_json,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external void dart_edge_sql_free_string(ffi.Pointer<ffi.Char> value);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int dart_edge_sql_native_abi_version();

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Char>)>()
external int dart_edge_sql_open_postgres_pool(
  ffi.Pointer<ffi.Char> connection_string,
);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Char>, ffi.Int32)>()
external int dart_edge_sql_open_postgres_pool_with_max_sessions(
  ffi.Pointer<ffi.Char> connection_string,
  int max_sessions,
);

@ffi.Native<ffi.Int64 Function(ffi.Int32)>()
external int dart_edge_sql_open_sqlite_in_memory_pool(int max_sessions);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Char>, ffi.Int32)>()
external int dart_edge_sql_open_sqlite_pool(
  ffi.Pointer<ffi.Char> path,
  int max_sessions,
);

@ffi.Native<ffi.Void Function(ffi.Int64)>(isLeaf: true)
external void dart_edge_sql_rollback_transaction(int handle);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> dart_edge_sql_take_last_error();
